--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
     test_code:
+        if: github.event_name != 'release'
         runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
         steps:
@@ -61,6 +62,7 @@ jobs:
                     echo "========================"
 
     test_docker_setup:
+        if: github.event_name != 'release'
         runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
         steps:
@@ -115,8 +117,7 @@ jobs:
     # https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
     deploy:
         # Only run deploy if all tests pass
-        needs: [ test_code, test_docker_setup ]
-
+        #        needs: [ test_code, test_docker_setup ]
         # Only run deploy job when a release is published
         if: github.event_name == 'release' && github.event.action == 'published'
 
@@ -155,8 +156,8 @@ jobs:
                 run: |
                     ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
                     # Install Docker if not already installed
-                    sudo dnf update -y
-                    sudo dnf install -y docker
+                    sudo yum update -y
+                    sudo yum install -y docker
                     sudo systemctl enable docker
                     sudo systemctl start docker
                     sudo usermod -aG docker $USER
